[Feature/#6] 로그인 전 사이드바 구현 및 공통 버튼 구현 (#7)
* style: 디자인시스템 수정

* asset: add image

* chore: add clsx, twMerge

* rename: 폴더 이동

* remove: 불필요한 파일 삭제

* style: 글로벌 스타일 추가

* style: 레이아웃 수정

* feat: twMerge를 활용한 스타일 충돌 방지

* chore: 이미지 경로 상수 추가

* feat: 공통 버튼 구현

* feat: onClick handler 추가

* feat: 로그인 전 사이드바 구현

* style: 스타일 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
   --color-gray-300: #b9b9b9;
   --color-gray-200: #d8d8d8;
   --color-gray-100: #e6e6e6;
-  --color-gray-100: #fafafa;
+  --color-gray-50: #fafafa;
 
   /* primary */
   --color-primary-600: #1e3a8a;
@@ -102,4 +102,9 @@ html {
 
 body {
   height: 100vh;
+}
+
+button {
+  cursor: pointer;
+  outline: none;
 }
