[Feature/#8] 공통 모달 구현 및 메일 구독 신청 컴포넌트 구현 (#9)
* chore: add svgr

* chore: svgr 설정

* asset: add asset

* asset: add asset

* remove: 불필요한 코드 삭제

* chore: svg 재설정

* asset: add asset

* feat: 공통 모달 구현

* style: font-regular 추가

* chore: path alias 추가

* asset: add asset

* rename: 네이밍 변경

* feat: 메일 구독 컴포넌트 구현

* style: 스타일 수정

* feat: 공통 Input 구현

* feat: 메일 구독 모달 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,8 @@
 
   --font-pretendard: var(--font-pretendard);
   --font-carter: var(--font-carter);
+
+  --font-regular: 400;
 }
 
 @layer utilities {
