--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,21 @@
     line-height: 150%;
     letter-spacing: 0.01rem;
   }
+  .logo-l {
+    font-size: 5rem;
+    line-height: 150%;
+    letter-spacing: -0.1rem;
+  }
+  .logo-m {
+    font-size: 3.75rem;
+    line-height: 150%;
+    letter-spacing: -0.075rem;
+  }
+  .logo-s {
+    font-size: 2.5rem;
+    line-height: 150%;
+    letter-spacing: -0.00375rem;
+  }
 }
 
 html {
